--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,21 @@
-//LOCALE
+#LOCALE
 spring.mvc.locale-resolver=fixed
 spring.mvc.locale=pt_BR
 
-//MYSQL
+#MYSQL
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/parkapidb?useSSL=false&allowPublicKeyRetrieval=true\
   &serverTimezone=America/Sao_Paulo
 spring.datasource.username=root
 spring.datasource.password=Korn1993
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-//JPA
+#JPA
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.hibernate.ddl-auto=update
+
+#Springdoc openApi 3.1 & Swagger 3
+springdoc.swagger-ui.path=/docs-park.html
+springdoc.api-docs.path=/docs-park
+springdoc.packagesToScan=com.stun106.parkapi.web.controller
+
